# yxy

./: .gitignore  Cargo.toml  README-zh.md  README.md  conf.example.yaml  create_xcframework.sh
.github/workflows/: ci.yml  cross.yml  rust.yml  swift-package.yml
include/: module.modulemap  yxy.h
src/: arg.rs  conf.rs  error.rs  ffi.rs  flags.rs  lib.rs  main.rs  utils.rs
src/req/: app.rs  auth.rs  login.rs  mod.rs  notice.rs  url.rs
