[package]
name = "yxy"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["IInfo <info@i1nfo.com>"]
description = "YXY platform spider"
keywords = ["yxy","yixiaoyuan", "spider"]
repository = "https://github.com/I-Info/yxy"
readme = "README.md"
exclude = [".github/*"]

[dependencies]
rsa = "0.6"
rand = "0.8"
base64 = "0.13"
md5 = "0.7"
aes = "0.8"
serde_yaml = "0.8"
serde_json = "1.0"
const_format = "0.2"
chrono = "0.4"

[dependencies.clap]
version = "3.2"
features = [
    "derive"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.reqwest]
version = "0.11"
features = [
    "blocking",
    "json",
    "cookies",
]

[dependencies.uuid]
version = "1.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]